# customer-behavior-sim

./: .gitignore  README.md  pyproject.toml
src/simlab/: __init__.py  clock.py  context.py  ids.py  main.py  report.py  simulation.py  state.py
src/simlab/entities/: __init__.py  customer.py  usage.py
src/simlab/reducers/: __init__.py  customer_created_reducer.py  event_stats_reducer.py  usage_recorded_reducer.py
src/simlab/systems/: __init__.py  customer_population.py  event.py  system.py  usage_recording.py
